* Bug Fixed MCG006 - HOME PAGE - Reduce spacing * Bug Fixed MCG007 - HOMEPAGE - IE9, FF - Text overflow in block article

--- a/css/home.css
+++ b/css/home.css
@@ -222,11 +222,14 @@ Version: 0.0.1
 }
 #articles .art .desc{
 	margin-top: 40px;
-	height: 110px;
+	height: 116px;
 	overflow: hidden;
 }
 #articles .art .more-detail{
 	font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
 	font-size: 16px;
 	margin-top: 10px;
+}
+footer {
+	margin-top: 0;
 }
